# sqlmodel-poc

./: .gitignore  README.md  pyproject.toml
db/: db.sqlite  script.sql
db/tables/: clinic.sql  clinician.sql  location.sql
scripts/: main.py
src/sqlmodel_poc/crud/: commands.py  exceptions.py
src/sqlmodel_poc/database/: connection.py  tables.py
src/sqlmodel_poc/settings/: constants.py
